INCLUDES = -I$(top_srcdir)/include -I$(HOME)/opt/include
METASOURCES = AUTO
_SOURCES = MenuDefs.h
_SOURCES = TraceManager.h
_SOURCES = TraceListPane.h TraceManager.h
_SOURCES = CPcapHandler.h
_SOURCES = PcapUtils.h
_SOURCES = PcapDefs.h PcapUtils.h
_SOURCES = CommonDefs.h PcapDefs.h PcapUtils.h
noinst_HEADERS = Capture.h DataTypes.h FastDelegate.h FastDelegateBind.h
_SOURCES = CommonDefs.h Globals.h PcapDefs.h PcapUtils.h
_SOURCES = CTrace.h CommonDefs.h Globals.h PcapDefs.h PcapUtils.h
_SOURCES = CTrace.h CTraceOptions.h CommonDefs.h Globals.h PcapDefs.h \
	PcapUtils.h
_SOURCES = CTrace.h CTraceOptions.h CommonDefs.h Globals.h PcapDefs.h \
	PcapUtils.h SelectAdapterDialog.h
_SOURCES = PktHeader.h
_SOURCES = CentralCaptureManager.h PktHeader.h
